--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MailApp Assignment</string>
     <string name="wrong_input">Please input valid info</string>
+    <string name="email_regex">^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$</string>
+    <string name="wrong_emails">Please enter valid email addresses for sender and receiver</string>
 </resources>
